--- a/package.json
+++ b/package.json
@@ -6,13 +6,22 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test": "jest --config jest.config.js"
   },
+  
   "devDependencies": {
+    "@babel/preset-env": "^7.23.6",
+    "@open-wc/testing": "^4.0.0",
+    "@types/jest": "^29.5.11",
+    "babel-jest": "^29.7.0",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
+    "ts-jest": "^29.1.1",
     "vite": "^5.0.0"
   },
   "dependencies": {
-    "jest": "^29.7.0",
     "lit": "^3.1.0"
   }
+  
 }
