--- a/package.json
+++ b/package.json
@@ -7,9 +7,8 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "test": "jest --config jest.config.js"
+    "test": "jest"
   },
-  
   "devDependencies": {
     "@babel/preset-env": "^7.23.6",
     "@open-wc/testing": "^4.0.0",
@@ -17,11 +16,11 @@
     "babel-jest": "^29.7.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
+    "sinon": "^17.0.1",
     "ts-jest": "^29.1.1",
     "vite": "^5.0.0"
   },
   "dependencies": {
     "lit": "^3.1.0"
   }
-  
 }
