--- a/package.json
+++ b/package.json
@@ -14,11 +14,14 @@
     "@open-wc/testing": "^4.0.0",
     "@types/jest": "^29.5.11",
     "babel-jest": "^29.7.0",
+    "create-vite": "^5.1.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "sinon": "^17.0.1",
     "ts-jest": "^29.1.1",
-    "vite": "^5.0.0"
+    "vite": "^5.0.10",
+    "vite-aliases": "^0.11.3",
+    "vite-plugin-pwa": "^0.17.4"
   },
   "dependencies": {
     "lit": "^3.1.0"
